almost working except blank swe keywordlines fail to work.

--- a/ArcsSystem/templates/projects/project_detail.html
+++ b/ArcsSystem/templates/projects/project_detail.html
@@ -21,15 +21,15 @@
             <h1 class="playfair-font text-xl md:text-4xl font-bold">{{ object.name }}</h1>
 
             {% if object.image %}
-            
-            
-            <img class="project-detail-image mt-4" src="{{object.image.url}}" alt="{% trans 'Responsive image' %}" />
-            
+
+
+            <img class="project-detail-image mt-4" src="{{object.image}}" alt="{% trans 'Responsive image' %}" />
+
             {% else %}
-                        
+
                 <div class="center" align="center" style="height: 30px; width: calc(50%);  background: coral">
                     <h5 align="center"  > No image</h5>
-                </div>        
+                </div>
             {% endif %}
 
             <div class="flex flex-col my-4 text-xl">
@@ -43,7 +43,7 @@
             <p class="">Status: </p>
             <p class="playfair-font font-bold pb-2">{{object.get_status_name}}</p>
             <p class="">Ämne: </p>
-            <p class="playfair-font font-bold pb-2">{{object.science_type}}</p>
+            <p class="playfair-font font-bold pb-2">{{object.keywords}}</p>
             <p class="">Startdatum: </p>
             <p class="playfair-font font-bold pb-2">{{object.start_date}}</p>
             <p class="">Slutdatum: </p>
@@ -57,26 +57,26 @@
             <p class="">Slutdatum: </p>
             <p class="playfair-font font-bold pb-2">{{object.end_date}}</p>
 
-         
+
         </div>
 
     </div>
-    
-    
+
+
     <!--   <picture class="detail-view">
         {# TODO implement additional web image format handling #}
         <source srcset="name.webp" type="image/webp" alt="{#TODO alt text#}">{#Webp image support first#}
             <source srcset="name.jpg" type="image/jpg" alt="{#TODO alt text#}">{#jpg support next#}
                 <img src="{{ object.image_dir }}"  alt="{% blocktrans %}Bild för projektet {{ object.name }}{% endblocktrans %}" width="300" height="300"/>
             </picture> -->
-            
-  
-<!--             
-            
+
+
+<!--
+
             <div class="custom-container">
-                
+
                 <ul class="nav nav-tabs">
-                    
+
                     <li class="nav-item">
                         <a class="nav-link active " data-toggle="tab" href="#step1">{% trans "Details" %}</a>
                     </li>
@@ -86,68 +86,68 @@
                     <li class="nav-item ">
                         <a class="nav-link " data-toggle="tab" href="#step_description">{% trans "Description" %}</a>
                     </li>
-                    
+
                     <li class="nav-item">
                         <a class="nav-link " data-toggle="tab" href="#step3">{% trans "Keywords" %}</a>
                     </li>
-                    
+
                     <li class="nav-item">
                         <a class="nav-link" data-toggle="tab" href="#step5">{% trans "Contact info" %} </a>
                     </li>
-                    
+
                     <li class="nav-item">
                         <a class="nav-link" data-toggle="tab" href="#step_map">{% trans "Location" %}</a>
                     </li>
-                    
+
                 </ul>
-                
-                
+
+
                 <div class="tab-content">
                     <br>
                     <div id="step1" class="tab-pane container active">
                         <br>
-                        
+
                         <h5>{% trans "Target audience" %}:  {{ object.target_audience}}</h5>
-                        
+
                         <br>
-                        
-                        
+
+
                         <h5>{% trans "Project status" %}: {{ object.get_status_name}}</h5>
-                        
-                        
+
+
                         <br>
-                        
+
                         <h5>{% trans "Science type" %}:  {{ object.science_type}}</</h5>
-                        
+
                     </div>
-                    
+
                     <div class="tab-pane container fade" id="step_aim">
                         <p>{{ object.aim|safe }}</p>
                     </div>
-                    
+
                     <div class="tab-pane container fade" id="step_description">
                         {{ object.description|safe }}
                     </div>
-                    
+
                     <div id="step3" class="tab-pane fade">
-                        
+
                         <h3>{% trans "Project keywords" %} </h3>
-                        
-                        
+
+
                         {% for line in object.keyword_lines.all %}
-                        
+
                         {{line|get_keyword:LANGUAGE_CODE |safe }}
                         <br>
-                        
+
                         {% endfor %}
                         <br>
                         <br>
-                        
-                        
+
+
                         {% if object.keyword_lines.all %}
-                        
+
                         <h3> {% trans "Keyword connections" %} </h3>
-                        
+
                         {% for one_list in object|get_all_related:LANGUAGE_CODE %}
                         {{ one_list.0|safe }}
                         <script>
@@ -166,35 +166,35 @@
 
 
 <!-- <div id="step5" class="tab-pane fade">
-    
+
     <h4>{% trans "Name" %}: {{ object.contact_name }}</h4>
     <h4>{% trans "Contact's role" %}: {{ object.contact_role }}</h4>
     <h4>{% trans "Affiliation" %}: {{ object.contact_affiliation }}</h4>
     <br>
-    
+
     {% if  object.url %}
     <h4><a href=" {{ object.url }}"> {% trans "External link to project"%}</a> </h4>
     (link addres:  {{ object.url }})
     <br>
-    
+
     {% endif %}
-    
-    
+
+
     <br>
     send email to user
     <textarea class="form-control"> </textarea>
-    
-    
+
+
 </div> -->
 
 
 <!-- <div id="step_map" class="tab-pane fade">
-    
+
     sweden
-    
+
     lägg till detta i framtiden
-    
-    
+
+
 </div> -->
 
 </div>
