--- a/ArcsSystem/templates/projects/project_list.html
+++ b/ArcsSystem/templates/projects/project_list.html
@@ -152,9 +152,28 @@
 
         <div style="overflow:hidden" >
 
+
+
+
                 {% for line in ProjectEntry.keyword_lines.all  %}
-                {{ line|get_keyword:LANGUAGE_CODE|safe }}
+                  {{ line|get_keyword:"en"|safe }}
                 {% endfor %}
+
+
+              {{ProjectEntry.keywords}}
+
+              {% for keyword in ProjectEntry.keyword_lines.all %}
+                   {{ keyword }}
+                  {{ keyword.get_custom_html|safe }} <span style="width: 5px"></span>    <!-- looks ugly but here is a comma -->
+              {% endfor %}
+
+              {% with ProjectEntry.keywords|split:"&" as projects %}
+                  {% for project in projects %}
+                      {{ project }} <br>
+
+                  {% endfor %}
+              {% endwith %}
+
         </div>
             </div><!-- End of card-body -->
         </div><!-- end of card -->
