Got plotting on openstreetmap working for each project.

--- a/ArcsSystem/templates/keywords/keyword_detail.html
+++ b/ArcsSystem/templates/keywords/keyword_detail.html
@@ -42,7 +42,7 @@
         text {
             font-family: sans-serif;
             font-weight: lighter;
-            fill: white;
+            fill: black;
         }
     </style>
 
