--- a/ArcsSystem/templates/base.html
+++ b/ArcsSystem/templates/base.html
@@ -112,16 +112,16 @@
                         </form>
                     </div>
                 </div>
-                <div class="justify-content-end align-items-center d-none d-md-block col-md-4 h">
+                <!-- old listen button <div class="justify-content-end align-items-center d-none d-md-block col-md-4 h">
                     <button class="btn p-0">
                         <img class="main-media-btns" src="{% static 'icons/Hearing_Icon_3.png' %}"
                              alt="{% trans 'Ear icon to launch text to speech of the current page' %}"/>
                         <br>
                         <strong>Listen</strong>
                     </button>
-                </div>
+                </div>-->
 
-          
+
                 {% if user.is_authenticated %}
                     <div id="my_page" class="justify-content-end align-items-center col-sm-12 col-md-4 h">
                         <div class="dropdown">
@@ -150,7 +150,7 @@
 
 
                 {% else %}
-                    <div id="signup" class="justify-content-end align-items-center col-sm-12 col-md-4 h">
+                    <!--old account button <div id="signup" class="justify-content-end align-items-center col-sm-12 col-md-4 h">
                     <button class="btn p-0" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
                             style="float:right; color:black !important;">
                         <img class="main-media-btns" src="{% static 'icons/Account_Circle_Icon_5.png' %}"
@@ -167,7 +167,7 @@
                             <strong>{% trans "Signup" %}</strong>
                         </a>
                         </button>
-                    </div>
+                    </div>-->
                 {% endif %}
 
                 </div>
