--- a/ArcsSystem/templates/projects/project_detail.html
+++ b/ArcsSystem/templates/projects/project_detail.html
@@ -293,6 +293,8 @@
         }))
         // -(d.value**2  + 400)
         .force("center", d3.forceCenter(width / 2, height / 2));
+        //.force("x",d3.forceX(width/2).strength(0.4))
+        //.force("y",d3.forceY(height/2).strength(0.6))
     var link = svg.append("g")
         .attr("class", "links")
         .selectAll("line")
