--- a/ArcsSystem/templates/home.html
+++ b/ArcsSystem/templates/home.html
@@ -3,9 +3,12 @@
 {% load i18n %}
 {% load blog_extras %}
 {% load publications_extras %} <!-- for publications dynamic box -->
+{% load projects_extras %} <!-- for carousel dynamic box -->
 {% block title %}Home{% endblock title %}
 {% block content %}
 {{ var1 }}
+
+
 <div class="container-fluid">
     <div class="custom-container">
         <div class="row ">
@@ -31,81 +34,14 @@
 
                             <p> {% trans "The database at medborgarforskning.se contains citizen science projects and activities from Sweden that are available for participation. This includes both Swedish and international initiatives. You can use filters to search and sort among the projects to find, for example, projects that deal with a specific topic (e.g. birds or health), take place in specific locations (eg outdoors in nature or in cities), or aimed at different participants (e.g. children or adults). On the project pages you will find more information about what is involved as well as contact information for the organizer." %} <p>
                     </div>
-                    <div class="row">
-                        <div id="main-page-slider" class="col">
-                            <!--Carousel Wrapper-->
-                            <div id="multi-item-example" class="carousel slide carousel-multi-item carousel-multi-item-selector" data-ride="carousel">
-                                <div class="row slider-header d-flex justify-content-center align-items-center">
-                                    <div class="col">
-                                        <p class="font-weight-bold mb-0">{% trans "Project: Faunaväkteri" %}</p>
-                                    </div>
-                                    <div class="col">
-                                        <!--Controls-->
-                                        <div class="controls-top slider-top-controler ">
-                                          <a class="btn-floating" href="#multi-item-example" data-slide="prev"><img id="icon-preview-rotate" class="next-icon-slider" src="{% static 'icons/Arrow_Right_Drop_Circle_Outline_Icon_3.png'%}" alt="next-icon"/></a>
-                                          <a class="btn-floating" href="#multi-item-example" data-slide="next"><img class="next-icon-slider" src="{% static 'icons/Arrow_Right_Drop_Circle_Outline_Icon_3.png'%}" alt="next-icon"/></a>
-                                        </div>
-                                        <!--/.Controls-->
-                                    </div>
-                                </div>
 
-                              <!--Indicators-->
-                              <ol class="carousel-indicators mb-0 ">
-                                <li data-target="#multi-item-example" data-slide-to="0" class="active slider-selector"></li>
-                                <li data-target="#multi-item-example" data-slide-to="1" class="slider-selector"></li>
-                                <li data-target="#multi-item-example" data-slide-to="2" class="slider-selector"></li>
-                              </ol>
-                              <!--/.Indicators-->
-                              <!--Slides-->
-                              <div class="carousel-inner" role="listbox">
-                                <!--First slide-->
-                                <div class="carousel-item active carousel-item-margin slider-color">
 
-                                  <div class="col-md">
-                                    <div class="card mb-2 border-slider-content">
-                                        <img class="d-block w-100" src="{% static "devplaceholder/blake-carpenter-JYMCHXVyUqQ-unsplash.jpg" %}" alt="{% trans 'First slide' %}">
-                                        <div class="card-body content-slider">
-                                        <p class="font-weight-bold m-0">{% trans "PROJECT FOCUS: Fauna and insects" %}</p>
-                                        <p class="font-weight-bold m-0">{% trans "DESCRIPTION: Monitoring of fauna for insect activity." %}</p>
-                                        <p class="font-weight-bold m-0">{% trans "ONTACT POINT: Pavel Bina at SLU - [email or button]" %}</p>
-                                      </div>
-                                    </div>
-                                  </div>
-                                </div>
-                                <!--/.First slide-->
-                                <!--Second slide-->
-                                <div class="carousel-item carousel-item-margin slider-color">
+                        {{ no|get_recent_eu_projects|safe }}
 
-                                  <div class="col-md">
-                                    <div class="card mb-2 border-slider-content">
-                                        <img class="d-block w-100" src="{% static "devplaceholder/hobby-5114150_1920.jpg" %}" alt="{% trans 'Second slide' %}">
-                                        <div class="card-body content-slider">
-                                            <p class="font-weight-bold m-0">{% trans "PROJECT FOCUS: Fauna and insects"%}</p>
-                                            <p class="font-weight-bold m-0">{% trans "DESCRIPTION: Monitoring of fauna for insect activity." %}</p>
-                                            <p class="font-weight-bold m-0">{% trans "ONTACT POINT: Pavel Bina at SLU - [email or button]" %}</p>
-                                        </div>
-                                    </div>
-                                  </div>
-                                </div>
-                                <!--/.Second slide-->
-                                <!--Third slide-->
-                                <div class="carousel-item carousel-item-margin slider-color">
 
-                                  <div class="col-md">
-                                    <div class="card mb-2 border-slider-content">
-                                        <img class="d-block w-100" src="{% static "devplaceholder/library-438389_1920.jpg" %}" alt="{% trans 'Third slide' %}">
-                                        <div class="card-body content-slider">
-                                            <p class="font-weight-bold m-0">{% trans "PROJECT FOCUS: Fauna and insects"%}</p>
-                                            <p class="font-weight-bold m-0">{% trans "DESCRIPTION: Monitoring of fauna for insect activity." %}</p>
-                                            <p class="font-weight-bold m-0">{% trans "ONTACT POINT: Pavel Bina at SLU - [email or button]" %}</p>
-                                      </div>
                                     </div>
-                                  </div>
-                                </div>
-                                <!--/.Third slide-->
-                              </div>
-                              <!--/.Slides-->
-                            </div>
+                                            <!--/.Slides-->
+                                          </div>
                             <!--/.Carousel Wrapper-->
                         </div>
                     </div>
