--- a/ArcsSystem/templates/blog/blog_detail.html
+++ b/ArcsSystem/templates/blog/blog_detail.html
@@ -25,12 +25,7 @@
             <div class="row text-justify" style="padding-top: 10px;">
                 <div class="col">
                     <h1>{{ post.title }} </h1>
-                        {% for tag in post.tags.names %}
-                            <p>
-                                {{ tag }}
-                            </p>
-                        {% endfor %}
-                    <img class="img-fluid" src="{% static "devplaceholder/library-863148_1920.jpg" %}" alt="{% trans '' %}"/>
+                                          <!-- <img class="img-fluid" src="{% static "devplaceholder/library-863148_1920.jpg" %}" alt="{% trans '' %}"/> -->
                     <p>{{ post.content }}</p>
                 </div>
             </div>
@@ -38,12 +33,28 @@
         <div class="col-sm-3">
             <div class="row visual-Mindmap-style">
                 <div class="col-sm h" style:"word-wrap:break-word ">
+
+                  <!-- Old related publications sidebar
                     <h2>{% trans "Related publications" %}</h2>
                     {% with post.tags.names|query_publications:5 as blog_sidebar_papers %}
                         {% for q in blog_sidebar_papers %}
                             <p><a href="{% url 'publications:article_publications_detail' q.id %}">{{ q|break_text:20|safe }} </a></p>
                         {% endfor %}
                     {% endwith %}
+                    -->
+              <!-- New Related things sidebar-->
+                <h2>{% trans "Related things" %}</h2>
+                    {% for tag in post.tags.names %}
+                    <p>
+                      <a href="/search/{{ tag }}">{{ tag }}</a>
+                    </p>
+
+                      {% endfor %}
+
+              <!-- ./New related things sidebar -->
+
+
+
                 </div>
             </div>
         </div>
@@ -53,6 +64,12 @@
 
 
 {% endautoescape %}
+
+
+
+
+
+
 {% endblock content %}
 
 {% block extra_head %}
