--- a/ArcsSystem/templates/projects/project_detail.html
+++ b/ArcsSystem/templates/projects/project_detail.html
@@ -59,7 +59,7 @@
           {{ geovalue.3|unlocalize }}
           {% endfor %}
           &amp;layer=mapnik&amp;marker={{object.latitude|unlocalize}}%2C{{object.longitude|unlocalize}}" style="border: 1px solid black"></iframe>
-          <br/><small><a href="https://www.openstreetmap.org/?mlat=52.1572&amp;mlon=4.3997#map=12/52.1572/4.3997">Show bigger map</a></small>
+          <br/><small><a href="https://www.openstreetmap.org/?mlat=52.1572&amp;mlon=4.3997#map=12/52.1572/4.3997">{% trans "Show bigger map" %}</a></small>
 
 
 
