--- a/ArcsSystem/templates/publications/article_publications_list.html
+++ b/ArcsSystem/templates/publications/article_publications_list.html
@@ -17,8 +17,8 @@
                 <label for="searchmode">{% trans "Keyword search" %}</label>
                 <br>
                 <!-- SEARCH BOX -->
-                <input name="q" type="text" placeholder="Search publications...">
-                <input type="submit" value="Submit">
+                <input name="q" type="text" placeholder="{% trans "Search publications..." %}">
+                <input type="submit" value="{% trans "Submit" %}">
                 <!-- SORT MODES -->
                 <br>
                 <input type="radio" id="year" name="sortmethod" value="year" checked="checked">
