--- a/ArcsSystem/templates/nav_main.html
+++ b/ArcsSystem/templates/nav_main.html
@@ -11,7 +11,7 @@
 
 
             <a class="nav-link dropdown-toggle pl-8 text-black bg-color-primary" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" ;">
-{% trans "UTFORSKA" %}        </a>
+{% trans "EXPLORE" %}        </a>
             <div class="dropdown-menu main-menu-buttons bg-color-primary " aria-labelledby="navbarDropdown">
 
                   <a class="dropdown-item bg-color-primary" href="{% url 'projects:project_list' %}">{%trans "Citizen Science Projects" %}</a>
@@ -23,22 +23,20 @@
                   <a class="dropdown-item bg-color-primary" href="{% url 'publications:article_publications_list' %}">{%trans "Publications Database" %}</a>
                   </ul>
 
-                  <div class="dropdown-divider"></div>
-                    <a class="dropdown-item bg-color-primary" href="/people/users/">{%trans "List of contributors" %}</a>
-
+                  <!--<div class="dropdown-divider"></div>
+                    <a class="dropdown-item bg-color-primary" href="/people/users/">{%trans "List of contributors" %}</a>-->
                   </div>
 
 
 
 
-        <a href="{% url 'projects:project_submissionform' %}" class="pl-8 text-black">
-            {% trans "STARTA PROJEKT" %}
-        </a>
+        <a href="{% url 'projects:project_submissionform' %}" class="pl-8 text-black bg-color-primary">{% trans "START PROJECT" %}</a>
 
-
+<ul class="list-unstyled"> <!--removes annoying bullets -->
 <li class="nav-item header-menu-li-style col-sm-3">
+
           <a class="nav-link dropdown-toggle pl-8 text-black bg-color-primary" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" ;">
-                              {% trans "VAD ÄR MEDBORGARFORSKNING" %}
+                            {% trans "WHAT IS CITIZEN SCIENCE" %}
                           </a>
 
 
@@ -66,6 +64,7 @@
                           </div>
 
 </li>
+</ul>
 
         <!--<a href="#" class="pl-8 text-black">
             SÖK
@@ -133,88 +132,5 @@
         Too bad the menu has to be inside of the button
         but hey, it's pure CSS magic.
         -->
-        <ul id="menu" class="flex flex-col">
-            <a class=""  href= {% url 'staticpages:homepage_view' %}>
-                <img class="w-32" src="{% static 'icons/medborgarforskning-C-1000px_1.png' %}"
-                     alt="{% trans 'Medborgarforskning.se Logo linking to the site homepage' %}"/>
-            </a>
-
-            <a class="nav-link dropdown-toggle pl-8 text-black bg-color-primary" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" ;">
-{% trans "UTFORSKA" %}        </a>
-            <div class="dropdown-menu main-menu-buttons bg-color-primary " aria-labelledby="navbarDropdown">
-
-                  <a class="dropdown-item bg-color-primary" href="{% url 'projects:project_list' %}">{%trans "Citizen Science Projects" %}</a>
-                    <div class="dropdown-divider"></div>
-
-                    <a class="dropdown-item bg-color-primary" href="{% url 'workpackages:category_view' %}">{%trans "ARCS knowledge base" %}</a>
-                    <ul>
-                    <div class="dropdown-divider"></div>
-                  <a class="dropdown-item bg-color-primary" href="{% url 'publications:article_publications_list' %}">{%trans "Publications Database" %}</a>
-                  </ul>
-
-                  <div class="dropdown-divider"></div>
-                    <a class="dropdown-item bg-color-primary" href="/people/users/">{%trans "List of contributors" %}</a>
-
-                  </div>
-
-
-
-
-        <a href="{% url 'projects:project_submissionform' %}" class="pl-8 text-black">
-            {% trans "STARTA PROJEKT" %}
-        </a>
-
-
-<li class="nav-item header-menu-li-style col-sm-3">
-          <a class="nav-link dropdown-toggle pl-8 text-black bg-color-primary" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" ;">
-                              {% trans "VAD ÄR MEDBORGARFORSKNING" %}
-                          </a>
-
-
-                          <div class="dropdown-menu main-menu-buttons bg-color-primary" aria-labelledby="navbarDropdown">
-
-
-
-                              {% for page in 'citizen-science'|get_menu %}
-                              {% if page.sub_category %}
-                              <ul>
-                                  <li class="nav-item dropdown">
-                                      <a class="dropdown-item" href="{{ page.get_absolute_url }}">
-                                          <p class="font-weight-bold">{{ page.title }}</p>
-                                      </a>
-                                  </li>
-                              </ul>
-                              <div class="dropdown-divider"></div>
-                              {% else %}
-                              <a class="dropdown-item" href="{{ page.get_absolute_url }}">{{ page.title }}</a>
-                              <div class="dropdown-divider"></div>
-                              {% endif %}
-                              {% endfor %}
-
-
-                          </div>
-
-</li>
-
-
-
-
-
-
-
-
-</nav>
-<script>
-    $( "#form-search-nev" ).submit(function( event ) {
-      var form_value = $('#search_query').val();
-      if (form_value == ""){
-          event.preventDefault();
-          return;
-      }
-      var action = $('#form-search-nev').attr('action');
-      action = action.replace('SEARCH_QUERY', form_value);
-      $('#form-search-nev').attr('action', action);
-    });
-</script>
 
 {% endblock main_menu %}
