--- a/ArcsSystem/templates/projects/project_submissionform.html
+++ b/ArcsSystem/templates/projects/project_submissionform.html
@@ -12,7 +12,18 @@
 <h1>Kom igång med medborgarforskning</h1>
 
 
-<p>Lorem ipsum....</p>
+<p>För att ditt projekt ska bli synligt i hela Europa använder vi EU-Citizen Sciences
+databas. När du lägger upp ditt projekt på EU-Citizen Sciences plattform blir projektet
+synligt även på medborgarforskning.se.</p>
+<br>
+<p>
+Klicka på <a href="https://eu-citizen.science/login/">https://eu-citizen.science/login/</a>
+för att skapa ett konto hos EU-Citizen Science
+  </p>
+
+
+
+
 
 
 
